# graphbase

./: .gitignore  LICENSE  Makefile  README.md  bootstrap_cmake.sh  helpers.mk  products.mk
doc/: architektura.tex  thesis.tex
dummy_data/: simple_graph_request.proto
src/: CMakeLists.txt  checklist.txt
src/bins/oracle/: Makefile  client.cpp  client_main.cpp  server.cpp  server.hpp  server_main.cpp
src/bins/oracle/client/: client.cpp  client.hpp  client_main.cpp
src/bins/oracle/server/: server.cpp  server.hpp  server_main.cpp
src/conversions/: Makefile  undirected.cpp  undirected.hpp
src/estd/: Makefile  estd.hpp  generator.hpp  type_traits.hpp
src/graph/: Makefile
src/graph/algo/: bfs.hpp  bipartite.hpp  complete.hpp  predicates.hpp  undirected_predicates.cpp  undirected_predicates.hpp
src/graph/common/: common.cpp  common.hpp
src/graph/graph/: directed.hpp  undirected.hpp  undirected_impl.hpp  undirected_vector_edge_container.cpp  undirected_vector_edge_container.hpp
src/graphsource/: Makefile  all_graphs.cpp  all_graphs.hpp  graphsource.cpp  graphsource.hpp  kinds.hpp  types.hpp
src/oracle/: Makefile  oracle.cpp  oracle.hpp  process_request.cpp  process_request.hpp
src/patterns/: istream.hpp
src/protos/: Makefile  graph.proto  sv_oracle.proto
src/query/: bind.cpp  bind.hpp  binding.hpp  call.hpp  environment.cpp  environment.hpp  evaluate.hpp  expression.hpp  forall.cpp  forall.hpp  iexpression.hpp  list.cpp  list.hpp  logic.cpp  logic.hpp  quantifier_bind.cpp  quantifier_bind.hpp  query.cpp  query.hpp  value.cpp  value.hpp  var.cpp  var.hpp
src/query/conversions/: conversions.hpp
src/query/literals/: literals.hpp
src/query/value/: boolean.hpp  graph.hpp  integer.cpp  integer.hpp  stream.cpp  stream.hpp  value.hpp  vector.hpp
src/query/value/builtin/: range.cpp  range.hpp
src/query/value/builtin/graphs/: undirected.hpp
src/request/: expression.cpp  forall.cpp  forall.hpp  list.cpp  list.hpp  list_graphs.cpp  list_graphs.hpp  literals.cpp  literals.hpp
src/tst/: CMakeLists.txt
src/tst/estd/: type_traits.cpp
src/tst/graph/: Makefile  test_all.cpp
src/tst/graph/algo/: bipartite.cpp  complete.cpp
src/tst/graph/graph/: directed.cpp  undirected.cpp
src/tst/query/: call.cpp  environment.cpp  evaluate.cpp  forall.cpp  logic.cpp  quantifier_bind.cpp
src/tst/query/value/builtin/: range.cpp
src/tst/request/: list_graphs.cpp
tex/: Makefile  jezyk-zapytan.tex  thesis.tex  wprowadzenie.tex
